[Agent][Tavily] Add `symfony/ai-tavily-tool`

--- a/examples/composer.json
+++ b/examples/composer.json
@@ -18,10 +18,11 @@
         "probots-io/pinecone-php": "^1.0",
         "psr/http-factory-implementation": "*",
         "symfony/ai-agent": "@dev",
+        "symfony/ai-brave-tool": "@dev",
         "symfony/ai-chat": "@dev",
         "symfony/ai-platform": "@dev",
         "symfony/ai-store": "@dev",
-        "symfony/ai-brave-tool": "@dev",
+        "symfony/ai-tavily-tool": "@dev",
         "symfony/cache": "^7.3|^8.0",
         "symfony/clock": "^7.3|^8.0",
         "symfony/console": "^7.3|^8.0",
