--- a/examples/composer.json
+++ b/examples/composer.json
@@ -20,6 +20,7 @@
         "symfony/ai-agent": "@dev",
         "symfony/ai-brave-tool": "@dev",
         "symfony/ai-chat": "@dev",
+        "symfony/ai-openmeteo-tool": "@dev",
         "symfony/ai-platform": "@dev",
         "symfony/ai-store": "@dev",
         "symfony/ai-tavily-tool": "@dev",
