--- a/demo/composer.json
+++ b/demo/composer.json
@@ -15,6 +15,7 @@
         "runtime/frankenphp-symfony": "^0.2.0",
         "symfony/ai-bundle": "@dev",
         "symfony/ai-openmeteo-tool": "@dev",
+        "symfony/ai-serpapi-tool": "@dev",
         "symfony/asset": "~7.3.0",
         "symfony/asset-mapper": "~7.3.0",
         "symfony/clock": "~7.3.0",
