Ease LiteLLM setup for examples

--- a/examples/litellm/config.yaml
+++ b/examples/litellm/config.yaml
@@ -3,3 +3,7 @@ model_list:
       litellm_params:
           model: mistral/mistral-small-latest
           api_key: "os.environ/MISTRAL_API_KEY"
+
+general_settings:
+    master_key: sk-1234
+    database_url: "postgresql://litellm:litellm@litellm-db:5432/litellm"
