--- a/examples/.env
+++ b/examples/.env
@@ -114,6 +114,7 @@ LMSTUDIO_HOST_URL=http://127.0.0.1:1234
 
 # For using LiteLLM
 LITELLM_HOST_URL=http://127.0.0.1:4000
+LITELLM_API_KEY=sk-1234
 
 # Qdrant (store)
 QDRANT_HOST=http://127.0.0.1:6333
