--- a/examples/compose.yaml
+++ b/examples/compose.yaml
@@ -196,7 +196,16 @@ services:
             - ./litellm/config.yaml:/app/config.yaml
         env_file:
             - .env
+            - path: .env.local
+              required: false
         command: [ "--config", "/app/config.yaml", "--port", "4000", "--num_workers", "8" ]
+
+    litellm-db:
+        image: pgvector/pgvector:0.8.0-pg17
+        environment:
+            POSTGRES_DB: litellm
+            POSTGRES_USER: litellm
+            POSTGRES_PASSWORD: litellm
 
 volumes:
     typesense_data:
