Add branch-alias for 0.x-dev to all component composer.json files
Configure Composer branch aliases to map the main branch to 0.x-dev
for all components in the monorepo (agent, ai-bundle, chat, mcp-bundle,
platform, and store).

--- a/src/mcp-bundle/composer.json
+++ b/src/mcp-bundle/composer.json
@@ -45,6 +45,9 @@
         }
     },
     "extra": {
+        "branch-alias": {
+            "dev-main": "0.x-dev"
+        },
         "thanks": {
             "name": "symfony/ai",
             "url": "https://github.com/symfony/ai"
