--- a/composer.json
+++ b/composer.json
@@ -7,6 +7,7 @@
     ],
     "require-dev": {
         "php": ">=8.2",
+        "deptrac/deptrac": "^4.2",
         "php-cs-fixer/shim": "^3.75",
         "phpstan/phpstan-strict-rules": "^2.0",
         "symfony/filesystem": "^7.3|^8.0",
