Test only PHP 8.2 and 8.5 in CI workflows

--- a/.github/workflows/unit-tests.yaml
+++ b/.github/workflows/unit-tests.yaml
@@ -23,7 +23,7 @@ jobs:
         strategy:
             fail-fast: false
             matrix:
-                php-version: ['8.2', '8.3', '8.4', '8.5']
+                php-version: ['8.2', '8.5']
                 dependency-version: ['']
                 symfony-version: ['']
                 include:
@@ -34,7 +34,7 @@ jobs:
                     -   php-version: '8.2'
                         symfony-version: '7.4.*'
                     # Symfony 8.0
-                    -   php-version: '8.4'
+                    -   php-version: '8.5'
                         symfony-version: '8.0.*'
 
         env:
