Pass OPENAI_API_KEY secret to examples runner
GitHub Actions secrets are not automatically exposed as environment
variables. They need to be explicitly passed using the env key.

--- a/.github/workflows/run-examples.yaml
+++ b/.github/workflows/run-examples.yaml
@@ -30,6 +30,8 @@ jobs:
             - name: Run OpenAI examples
               id: run-examples
               run: ./runner openai
+              env:
+                  OPENAI_API_KEY: ${{ secrets.OPENAI_API_KEY }}
 
             - name: Remove label
               if: always()
