--- a/demo/composer.json
+++ b/demo/composer.json
@@ -6,10 +6,10 @@
     "require": {
         "php": ">=8.4",
         "ext-ctype": "*",
-        "ext-iconv": "*",
         "ext-gd": "*",
+        "ext-iconv": "*",
         "codewithkyrian/chromadb-php": "^0.4.0",
-        "league/commonmark": "^2.7",
+        "league/commonmark": "^2.7.1",
         "mrmysql/youtube-transcript": "^0.0.5",
         "php-http/discovery": "^1.20",
         "runtime/frankenphp-symfony": "^0.2.0",
@@ -17,42 +17,42 @@
         "symfony/ai-clock-tool": "@dev",
         "symfony/ai-similarity-search-tool": "@dev",
         "symfony/ai-wikipedia-tool": "@dev",
-        "symfony/asset": "~7.3.0",
-        "symfony/asset-mapper": "~7.3.0",
-        "symfony/clock": "~7.3.0",
-        "symfony/console": "~7.3.0",
-        "symfony/css-selector": "~7.3.0",
-        "symfony/dom-crawler": "~7.3.0",
-        "symfony/dotenv": "~7.3.0",
-        "symfony/flex": "^2.5",
-        "symfony/form": "~7.3.0",
-        "symfony/framework-bundle": "~7.3.0",
-        "symfony/http-client": "~7.3.0",
+        "symfony/asset": "^7.3",
+        "symfony/asset-mapper": "^7.3.5",
+        "symfony/clock": "^7.3",
+        "symfony/console": "^7.3.6",
+        "symfony/css-selector": "^7.3.6",
+        "symfony/dom-crawler": "^7.3.3",
+        "symfony/dotenv": "^7.3.2",
+        "symfony/flex": "^2.10",
+        "symfony/form": "^7.3.6",
+        "symfony/framework-bundle": "^7.3.6",
+        "symfony/http-client": "^7.3.6",
         "symfony/mcp-bundle": "@dev",
-        "symfony/mime": "~7.3.0",
+        "symfony/mime": "^7.3.4",
         "symfony/monolog-bundle": "^3.10",
-        "symfony/runtime": "~7.3.0",
-        "symfony/twig-bundle": "~7.3.0",
-        "symfony/uid": "~7.3.0",
+        "symfony/runtime": "^7.3.4",
+        "symfony/twig-bundle": "^7.3.4",
+        "symfony/uid": "^7.3.1",
         "symfony/ux-dropzone": "^2.31",
-        "symfony/ux-icons": "^2.25",
-        "symfony/ux-live-component": "^2.25",
-        "symfony/ux-turbo": "^2.25",
-        "symfony/ux-typed": "^2.25",
-        "symfony/yaml": "~7.3.0",
-        "twig/extra-bundle": "^3.21",
-        "twig/markdown-extra": "^3.21",
-        "twig/twig": "^3.21"
+        "symfony/ux-icons": "^2.31",
+        "symfony/ux-live-component": "^2.31",
+        "symfony/ux-turbo": "^2.31",
+        "symfony/ux-typed": "^2.31",
+        "symfony/yaml": "^7.3.5",
+        "twig/extra-bundle": "^3.22.1",
+        "twig/markdown-extra": "^3.22",
+        "twig/twig": "^3.22"
     },
     "require-dev": {
-        "php-cs-fixer/shim": "^3.75",
-        "phpstan/phpstan": "^2.1",
-        "phpstan/phpstan-strict-rules": "^2.0",
-        "phpunit/phpunit": "^11.5",
-        "symfony/browser-kit": "~7.3.0",
-        "symfony/debug-bundle": "~7.3.0",
-        "symfony/stopwatch": "~7.3.0",
-        "symfony/web-profiler-bundle": "~7.3.0"
+        "php-cs-fixer/shim": "^3.90",
+        "phpstan/phpstan": "^2.1.32",
+        "phpstan/phpstan-strict-rules": "^2.0.7",
+        "phpunit/phpunit": "^11.5.44",
+        "symfony/browser-kit": "^7.3.6",
+        "symfony/debug-bundle": "^7.3.5",
+        "symfony/stopwatch": "^7.3",
+        "symfony/web-profiler-bundle": "^7.3.5"
     },
     "replace": {
         "symfony/polyfill-ctype": "*",
