--- a/.github/workflows/run-examples.yaml
+++ b/.github/workflows/run-examples.yaml
@@ -4,6 +4,9 @@ on:
     pull_request:
         types: [labeled]
 
+#permissions:
+#    pull-requests: write
+
 defaults:
     run:
         working-directory: examples
@@ -33,14 +36,15 @@ jobs:
               env:
                   OPENAI_API_KEY: ${{ secrets.OPENAI_API_KEY }}
 
-            - name: Remove label
-              if: always()
-              uses: actions/github-script@v7
-              with:
-                  script: |
-                      await github.rest.issues.removeLabel({
-                        owner: context.repo.owner,
-                        repo: context.repo.repo,
-                        issue_number: context.issue.number,
-                        name: 'Run examples'
-                      });
+#            - name: Remove label
+#              if: always()
+#              uses: actions/github-script@v7
+#              with:
+#                  script: |
+#                      await github.rest.issues.removeLabel({
+#                        owner: context.repo.owner,
+#                        repo: context.repo.repo,
+#                        issue_number: context.issue.number,
+#                        name: 'Run examples'
+#                      });
+
