[ai.symfony.com] Replace * with ^7.3 for Symfony packages

--- a/ai.symfony.com/composer.json
+++ b/ai.symfony.com/composer.json
@@ -7,17 +7,17 @@
         "php": ">=8.2",
         "ext-ctype": "*",
         "ext-iconv": "*",
-        "symfony/asset": "*",
-        "symfony/asset-mapper": "*",
-        "symfony/console": "*",
-        "symfony/dotenv": "*",
+        "symfony/asset": "^7.3",
+        "symfony/asset-mapper": "^7.3",
+        "symfony/console": "^7.3",
+        "symfony/dotenv": "^7.3",
         "symfony/flex": "^2",
-        "symfony/framework-bundle": "*",
-        "symfony/runtime": "*",
+        "symfony/framework-bundle": "^7.3",
+        "symfony/runtime": "^7.3",
         "symfony/stimulus-bundle": "^2.31",
-        "symfony/twig-bundle": "*",
+        "symfony/twig-bundle": "^7.3",
         "symfony/ux-icons": "^2.31",
-        "symfony/yaml": "*",
+        "symfony/yaml": "^7.3",
         "twig/extra-bundle": "^3.0",
         "twig/twig": "^3.0"
     },
