--- a/src/chat/composer.json
+++ b/src/chat/composer.json
@@ -32,18 +32,16 @@
         "phpstan/phpstan-strict-rules": "^2.0",
         "phpunit/phpunit": "^11.5.13",
         "psr/cache": "^3.0",
-        "symfony/dependency-injection": "^7.3|^8.0",
         "symfony/clock": "^7.3|^8.0",
         "symfony/console": "^7.3|^8.0",
+        "symfony/dependency-injection": "^7.3|^8.0",
         "symfony/http-foundation": "^7.3|^8.0",
         "symfony/serializer": "^7.3|^8.0"
     },
     "conflict": {
         "mongodb/mongodb": "<1.21"
     },
-    "suggest": {
-        "symfony/clock": "To use stores that requires waiting for actions like Meilisearch"
-    },
+    "minimum-stability": "dev",
     "autoload": {
         "psr-4": {
             "Symfony\\AI\\Chat\\": "src/"
@@ -66,6 +64,5 @@
             "name": "symfony/ai",
             "url": "https://github.com/symfony/ai"
         }
-    },
-    "minimum-stability": "dev"
+    }
 }
