Add Symfony Community as author to all composer.json files

--- a/src/mcp-bundle/composer.json
+++ b/src/mcp-bundle/composer.json
@@ -7,6 +7,10 @@
         {
             "name": "Christopher Hertel",
             "email": "mail@christopher-hertel.de"
+        },
+        {
+            "name": "Symfony Community",
+            "homepage": "https://symfony.com/contributors"
         }
     ],
     "require": {
