[AI Bundle][Store] Add `Retriever`

--- a/.github/workflows/integration-tests.yaml
+++ b/.github/workflows/integration-tests.yaml
@@ -104,6 +104,10 @@ jobs:
                   composer-options: "--no-scripts"
                   working-directory: demo
 
+            - name: Link local packages
+              working-directory: demo
+              run: ../link
+
             - run: composer run-script auto-scripts --no-interaction
               working-directory: demo
 
